--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr-TR">
 
 <head>
     <meta charset="UTF-8">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="PDF E Kitap İndir" />
-    <meta name="google-site-verification" content="nBTjgR-Kh0YaYVp2LzXhvWCrQ8yUrNBUgZRcqkMB38I" />
-    <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+    <meta name="author" content="E POSTA KUR" />
+<meta name="google-site-verification" content="Phv4IEz4LoJ1PIXHjuIJu_Wj2iiaZuWHiZjuw2yUfMQ" />    <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet" type="text/css">
     <link href="{{ site.baseurl }}/css/syntax.css" rel="stylesheet" type="text/css">
-{% include isso-comments.html %}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59353465-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-59353465-10');
-</script>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-2943359289617623",
-    enable_page_level_ads: true
-  });
-</script>
 </head>
 
 <body>
