--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar well">
-    <strong>Son Eklenenler</strong>
+    <strong>Popüler Mail Servisleri</strong>
     <ul>
         {% for post in site.posts limit:15 %}
           <li><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
