--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 {% include header.html %}
 <div class="container">
     <div class="row">
+        {% include ad %} {% include ad %}
         <div class="col-md-9">
             {{ content }}
         </div>
