--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,10 +24,10 @@
           </div>
           <div class="pagination">
               {% if page.next %}
-                <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url }}" class="next">Sonraki Kitap</a>
+                <a class="btn btn-default" href="{{ site.baseurl}}{{ page.next.url }}" class="next">Sonraki Mail Servisi</a>
               {% endif %}
               {% if page.previous %}
-                <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">Önceki Kitap</a>
+                <a class="btn btn-default" href="{{ site.baseurl}}{{ page.previous.url }}" class="previous">Önceki Mail Servisi</a>
               {% endif %}
           </div>
         </div>
