--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="row-fluid">
         <div class="span12 footer navbar-inverse navbar-fixed-bottom">
             <p class="copyright">&copy;{{ site.time | date: '%Y' }} {{ site.name }} <br/>
-                <a href="http://pdfekitapindir.club/pdf-kitap-indir">pdf kitap indir</a> | <a href="http://pdfekitapindir.club">e-kitap indir</a></p>
+             <a href="http://www.epostakur.site/hotmail-kaydol-hotmail-ac-hotmail-al">Hotmail Kaydol</a> |  <a href="http://www.epostakur.site/e-posta-ac-e-posta-kur">E Posta Aç</a> | <a href="http://www.epostakur.site/">E Posta Kur</a></p>
         </div>
     </div>
 </div>
