--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ site.baseurl }}/">Ana Sayfa</a></li>
-                    <li class="active"><a href="http://pdfekitapindir.club/pdf-kitap-indir">PDF Kitap İndir</a></li>
+                    <li class="active"><a href="http://www.epostakur.site/e-posta-ac-e-posta-kur">E Posta Al</a></li>
                 </ul>
               </div>
             </div>
