--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-9">
+                    {% include ad %} {% include ad %}
             {{ content }}
         </div>
        <div class="col-md-3">
